--- a/src/app/components/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.scss
@@ -1,7 +1,8 @@
 .global {
-  margin-top: 40px;
+  margin: 0px auto;
   display: flex;
   justify-content: center;
+  height: 100vh;
 }
 
 .card-container {
@@ -28,6 +29,7 @@
 .button-container {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 40px;
 }
 
 .type-container {
@@ -35,4 +37,16 @@
   flex-direction: row;
   justify-content: center;
   gap: 10px;
+}
+
+@media (width < 550px) {
+  .card-class {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .button-container {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
